--- a/heavycenter/src/main/res/layout/frag_main_trans_search.xml
+++ b/heavycenter/src/main/res/layout/frag_main_trans_search.xml
@@ -9,8 +9,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/ll_search"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
@@ -40,6 +39,11 @@
             style_common:boo_edit="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 </layout>
