--- a/heavycenter/src/main/res/layout/frag_main_trans_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_trans_detail.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="frag_main_trans_detail"
-            type="String" />
+            type="com.siweisoft.heavycenter.data.netd.trans.trans.TransRes.ResultsBean" />
     </data>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -39,112 +39,145 @@
             android:background="@drawable/icon_hv_main_order_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <LinearLayout
-            android:id="@+id/ll_top"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-
-            >
             <LinearLayout
-                android:paddingLeft="30dp"
-                android:layout_margin="5dp"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <LinearLayout
+                    android:layout_marginLeft="30dp"
+                    android:id="@+id/ll_top"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingTop="20dp"
+                    android:paddingBottom="20dp"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+                <LinearLayout
+                        android:layout_marginTop="10dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
                     <TextView
-                        android:text="混凝土"
-                        android:singleLine="true"
-                        android:textColor="@color/white"
-                        android:textSize="18sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                            android:singleLine="true"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/hv_dimen_text_title_aaaaa"
+                            android:text="@{frag_main_trans_detail.productName}"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
 
                     <TextView
-                        android:text="c30"
-                        android:singleLine="true"
-                        android:layout_marginLeft="14dp"
-                        android:textColor="@color/white"
-                        android:textSize="18sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                    <View
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="1dp"/>
-                    <TextView
-                        android:text="第104车"
-                        android:layout_marginRight="15dp"
-                        android:background="@drawable/bg_hv_sel_yel_blue_stroke"
-                        android:singleLine="true"
-                        android:layout_marginLeft="7dp"
-                        android:textColor="@color/color_yell_blue"
-                        android:textSize="8.5sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                            android:layout_weight="1"
+                            android:singleLine="true"
+                            android:layout_marginLeft="14dp"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/hv_dimen_text_aaa"
+                            android:text="@{frag_main_trans_detail.specifications}"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+                    <LinearLayout
+                            android:gravity="center_vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                        <TextView
+
+                                android:background="@drawable/bg_hv_sharp1_yell_stroke"
+                                android:singleLine="true"
+                                android:layout_marginLeft="5dp"
+                                android:textColor="@color/color_base_txt_heavycenter_y"
+                                android:textSize="12sp"
+                                android:text="@{frag_main_trans_detail.carLicenseNo}"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
+
+                    </LinearLayout>
                 </LinearLayout>
 
 
+                <LinearLayout
+                        android:layout_marginTop="10dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+
+                    <com.siweisoft.heavycenter.module.view.text.BgTextView
+                            android:padding="1dp"
+                            android:singleLine="true"
+                            android:textSize="13sp"
+                            android:visibility="visible"
+                            style_common:color_one="@color/color_hv_yelll"
+                            style_common:stroke="0dp"
+                            style_common:color_stroke="@color/red"
+                            style_common:corner="2dp"
+                            style_common:color_txt="@color/white"
+
+                            style_common:color_two="@color/color_red_800"
+                            style_common:stroke_two="2dp"
+                            style_common:color_stroke_two="@color/color_hv_yelll"
+                            style_common:corner_two="5dp"
+                            style_common:color_txt_two="@color/white"
+                            style_common:boo_one="false"
+                            android:text="发往"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+
+                </LinearLayout>
+
 
                 <TextView
-                    android:text="发往"
-                    android:id="@+id/tv_ordertype"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/bg_hv_sharp2_blue_solid"
-                    android:singleLine="true"
-                    android:textColor="@color/black"
-                    android:textSize="11sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:text="上海公司"
-                    android:id="@+id/tv_unit"
-                    android:layout_marginTop="5dp"
-                    android:singleLine="true"
-                    android:textColor="@color/white"
-                    android:textSize="14sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                        android:layout_marginTop="5dp"
+                        android:singleLine="true"
+                        android:textColor="@color/white"
+                        android:textSize="17sp"
+                        android:text="@{frag_main_trans_detail.receiveCompanyName}"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
 
                 <LinearLayout
-                    android:layout_marginTop="5dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
                     <TextView
-                        android:textColor="@color/white"
-                        android:textSize="13sp"
-                        android:text="沪12344"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                            android:layout_marginTop="5dp"
+                            android:singleLine="true"
+                            android:textColor="@color/white"
+                            android:textSize="17sp"
+                            android:text="@{frag_main_trans_detail.receiveCompanyName}"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
 
                     <TextView
-                        android:textColor="@color/white"
-                        android:textSize="11sp"
-                        android:text="驾驶员"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="5dp"
+                            android:singleLine="true"
+                            android:textColor="@color/white"
+                            android:textSize="17sp"
+                            android:text="@{frag_main_trans_detail.receiveCompanyName}"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
                     <TextView
-                        android:textColor="@color/white"
-                        android:textSize="11sp"
-                        android:text="联系电话"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="5dp"
+                            android:singleLine="true"
+                            android:textColor="@color/white"
+                            android:textSize="17sp"
+                            android:text="@{frag_main_trans_detail.receiveCompanyName}"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
 
 
                 </LinearLayout>
             </LinearLayout>
-
-
-
-
-        </LinearLayout>
 
             <LinearLayout
                 android:background="@color/white"
