--- a/heavycenter/src/main/res/layout/frag_myce_unit_list.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_list.xml
@@ -27,7 +27,8 @@
             android:elevation="2dp"
             android:text="请输入单位名称"
             android:layout_width="match_parent"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+        />
 
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
             SmartRefreshLayout:srlEnableLoadmore="false"
