--- a/heavycenter/src/main/res/layout/frag_myce_unit_nobind.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_nobind.xml
@@ -68,15 +68,15 @@
                 <TextView
                     android:id="@+id/bind"
                     android:text="立刻绑定"
-                    android:textSize="20sp"
-                    android:textColor="@color/white"
+                    android:textSize="22sp"
+                    android:textColor="@color/color_yell_white"
                     android:gravity="center"
-                    android:background="@drawable/drawable_hv_bg_btn_login"
+                    android:background="@drawable/bg_hv_press_sharp20_yell_while"
                     android:layout_marginTop="40dp"
                     android:paddingLeft="40dp"
                     android:paddingRight="40dp"
-                    android:paddingTop="8dp"
-                    android:paddingBottom="8dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
