--- a/heavycenter/src/main/res/layout/item_mana_good.xml
+++ b/heavycenter/src/main/res/layout/item_mana_good.xml
@@ -10,7 +10,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:background="@color/white"
         >
 
@@ -28,10 +28,10 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="80dp">
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="match_parent"
             android:paddingTop="5dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -58,8 +58,8 @@
                     <TextView
                         android:text='@{item_mana_good.productName+"  "+item_mana_good.specifications}'
                         android:singleLine="true"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
+                        android:textColor="@color/hv_color_text_title"
+                        android:textSize="@dimen/hv_dimen_text_title_aaaa"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -72,8 +72,8 @@
                     <TextView
                         android:text="@{item_mana_good.warehouseName}"
                         android:singleLine="true"
-                        android:textColor="@color/black"
-                        android:textSize="16sp"
+                        android:textColor="@color/color_grey_500"
+                        android:textSize="18sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -91,7 +91,7 @@
                         android:layout_weight="1"
                         android:singleLine="true"
                         android:textColor="@color/gray"
-                        android:textSize="14sp"
+                        android:textSize="@dimen/hv_dimen_text_title_aa"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content" />
 
