--- a/heavycenter/src/main/res/layout/item_mana_store.xml
+++ b/heavycenter/src/main/res/layout/item_mana_store.xml
@@ -10,7 +10,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:background="@color/white"
         >
 
@@ -29,16 +29,16 @@
             android:id="@+id/rl_root"
             android:background="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="80dp">
+            android:layout_height="match_parent">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:paddingTop="5dp"
+                android:layout_height="match_parent"
+                android:paddingTop="15dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingBottom="5dp">
+                android:paddingBottom="15dp">
 
                 <ImageView
                     android:src="@drawable/icon_hv_mana_store"
@@ -59,7 +59,7 @@
                         <TextView
                             android:singleLine="true"
                             android:textColor="@color/black"
-                            android:textSize="16sp"
+                            android:textSize="@dimen/hv_dimen_text_title_aaaa"
                             android:text="@{item_mana_store.warehouseName}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
@@ -83,7 +83,7 @@
                             android:layout_weight="1"
                             android:singleLine="true"
                             android:textColor="@color/gray"
-                            android:textSize="14sp"
+                            android:textSize="@dimen/hv_dimen_text_title_aa"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content" />
 
@@ -93,7 +93,7 @@
                             android:layout_marginLeft="10dp"
                             android:singleLine="true"
                             android:textColor="@color/gray"
-                            android:textSize="14sp"
+                            android:textSize="@dimen/hv_dimen_text_title_aa"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
