--- a/heavycenter/src/main/res/layout/item_myce_head.xml
+++ b/heavycenter/src/main/res/layout/item_myce_head.xml
@@ -38,23 +38,24 @@
 
 
                     <RelativeLayout
-                            android:padding="15dp"
                             android:layout_weight="0.8"
                             android:layout_width="0dp"
                             android:layout_height="match_parent">
 
 
                         <de.hdodenhof.circleimageview.CircleImageView
-                                android:layout_centerInParent="true"
+                                android:layout_centerVertical="true"
+                                android:layout_alignParentRight="true"
                                 android:id="@+id/iv_head"
                                 android:src="@drawable/icon_hv_myce_head"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"/>
+                                android:layout_width="140dp"
+                                android:layout_height="140dp"/>
 
                     </RelativeLayout>
 
 
                     <LinearLayout
+                            android:layout_marginLeft="10dp"
                             android:layout_weight="1"
                             android:orientation="vertical"
                             android:layout_width="0dp"
@@ -72,7 +73,7 @@
                                     android:singleLine="true"
                                     android:id="@+id/tv_name"
                                     android:text="18721654587"
-                                    android:textSize="23sp"
+                                    android:textSize="25sp"
                                     android:textColor="@color/white"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"/>
