--- a/heavycenter/src/main/res/layout/item_myce_unit_bind.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_bind.xml
@@ -9,7 +9,7 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="70dp">
+        android:layout_height="wrap_content">
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="horizontal"
             android:background="@drawable/drawable_press_blue_while"
@@ -18,7 +18,7 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingBottom="10dp"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/iv_sel"
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
-                    android:textSize="15sp"
+                    android:textSize="18sp"
                     android:textColor="@color/color_grey_900"
                     android:text="@{item_myce_unit_bind.companyName}"
                     android:id="@+id/tv_com_name"
@@ -41,7 +41,7 @@
 
                 <TextView
                     android:layout_marginTop="10dp"
-                    android:textSize="15sp"
+                    android:textSize="18sp"
                     android:textColor="@color/gray"
                     android:text="@{item_myce_unit_bind.contactName}"
                     android:id="@+id/tv_mana_name"
